Filament V3 Code Fixes

--- a/public/css/aymanalhattami/filament-slim-scrollbar/filament-slim-scrollbar.css
+++ b/public/css/aymanalhattami/filament-slim-scrollbar/filament-slim-scrollbar.css
@@ -8,11 +8,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #838bd6
+    background: #d1d5db
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #969ee0
+    background: #c9cbcd
 }
 
 .dark ::-webkit-scrollbar-track {
